--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"scripts": {
 		"dev": "nodemon --inspect ./app.js",
-		"prod": "node ./app.js"
+		"prod": "node ./app.js",
+		"migration:generate": "CLI=true sequelizemm -f ./models/index.js",
+		"migation:migrate": "sequelize-cli db:migrate"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.1",
@@ -12,6 +14,7 @@
 		"mariadb": "^3.2.2",
 		"pg": "^8.11.3",
 		"sequelize": "^6.35.1",
+		"sequelizemm": "^1.3.0",
 		"sqlite3": "^5.1.6"
 	}
 }
