--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
 	"scripts": {
 		"dev": "nodemon --inspect ./app.js",
-		"migration:generate": "sequelizemm -f ./models/index.js",
+		"migration:generate": "CLI=true sequelizemm -f ./models/index.js",
 		"migration:migrate": "sequelize-cli db:migrate",
 		"prod": "node ./app.js",
 		"start": "sequelize-cli db:migrate && node ./app.js"
 	},
 	"devDependencies": {
-		"nodemon": "^3.0.1",
-		"sequelize-cli": "^6.6.2"
+		"nodemon": "^3.0.1"
 	},
 	"dependencies": {
 		"express": "^4.18.2",
 		"mariadb": "^3.2.2",
 		"pg": "^8.11.3",
 		"sequelize": "^6.35.1",
+		"sequelize-cli": "^6.6.2",
 		"sequelizemm": "^1.3.0",
 		"sqlite3": "^5.1.6"
 	}
