--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"dev": "nodemon --inspect ./app.js",
-		"migration:generate": "CLI=true sequelizemm -f ./models/index.js",
+		"migration:generate": " sequelizemm -f ./models/index.js",
 		"migration:migrate": "sequelize-cli db:migrate",
 		"prod": "node ./app.js",
 		"start": "sequelize-cli db:migrate && node ./app.js"
@@ -10,6 +10,7 @@
 		"nodemon": "^3.0.1"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"express": "^4.18.2",
 		"mariadb": "^3.2.2",
 		"pg": "^8.11.3",
